--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   mongo:
     image: mongo:6
@@ -19,8 +17,8 @@ services:
       - MONGO_URL=mongodb://mongo:27017/meanapp
     depends_on:
       - mongo
-    expose:
-      - "3000"
+    ports:
+      - "3000:3000"
 
   frontend:
     build: ./frontend
@@ -29,8 +27,8 @@ services:
     restart: always
     depends_on:
       - backend
-    expose:
-      - "80"
+    ports:
+      - "4200:80"
 
   nginx:
     image: nginx:alpine
